2000-03-20  Adam Fedor  <fedor@gnu.org>

	* configure.in (GRAPHIC_LIBS): Check for libXmu if libwraster
	not found. Add X libs if libwraster not found.

2000-03-19  Richard Frith-Macdonald <rfm@gnu.org>

	* rules.make: added rule for GSDOC
	* documentation.make: added gsdoc make rules.

2000-03-11  Adam Fedor  <fedor@gnu.org>

	* brain.make: Use new GRAPHIC_ variables. Remove old TIFF, JPEG
	and X varialbles.
	* config.make.in: Likewise.
	* configure.in: Check for wraster library. Avoid checking for
	tiff, jpeg, etc, if found.

2000-03-06  Adam Fedor  <fedor@gnu.org>

	* config.guess: Better guess of NetBSD systems.
	* target.make: Support for shared libs on NetBSD. (patch from 
	Peter Cooper <comrade@obverse.com.au>).

	* makeinstalldirs: Add '-p' option to mkdir, which prevents
	race condition when running make with the '-j' option. Some
	makes may not have this option, so we'll see if this works.

Fri Feb 25 13:32:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* rules.make: replace rule for PALETTE_ICON that somehow got lost.

Thu Feb 24 21:12:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* bundle.make: fixes to permit use of BUNDLE_INSTALL_DIR variable.
	patch by jagapen@whitewater.chem.wisc.edu

2000-02-23  Adam Fedor  <fedor@gnu.org>

	* configure.in: Make separate sytem root the default. Disable by
	using --without-system-root when configuring.

	* rules.make: Change compilation rule so filename is at beginning
	of line (patch from David Relson <relson@expressgate.net>).

2000-02-20  Matthias Klose  <doko@cs.tu-berlin.de>

	* names.make: GNUSTEP_HOST: Use value of GNUSTEP_HOST_GUESS.
	* GNUstep.csh.in: Use GNUSTEP_MAKEFILES.

2000-02-18  Adam Fedor  <fedor@gnu.org>

	* GNustep.sh.in: Use pushd/popd to changes dirs.

2000-01-26  Adam Fedor  <fedor@gnu.org>

	* rules.make: Revert previous change of parens around tmp.

2000-02-18  Adam Fedor  <fedor@gnu.org>

	* Version: 0.6.5 Released.

2000-02-16  Adam Fedor  <fedor@gnu.org>
