@@ -31,6 +31,8 @@ include $(GNUSTEP_MAKEFILES)/rules.make
 
 # The name of the bundle is in the BUNDLE_NAME variable.
 # The list of bundle resource file are in xxx_RESOURCE_FILES
+# The list of localized bundle resource files is in xxx_LOCALIZED_RESOURCE_FILES
+# The list of languages the bundle supports is in xxx_LANGUAGES
 # The list of bundle resource directories are in xxx_RESOURCE_DIRS
 # The name of the principal class is xxx_PRINCIPAL_CLASS
 # where xxx is the bundle name
@@ -85,6 +87,12 @@ BUNDLE_RESOURCE_DIRS = $(foreach d, $(RESOURCE_DIRS), $(BUNDLE_DIR_NAME)/Resourc
 ifeq ($(strip $(RESOURCE_FILES)),)
   override RESOURCE_FILES=""
 endif
+ifeq ($(strip $(LOCALIZED_RESOURCE_FILES)),)
+  override LOCALIZED_RESOURCE_FILES=""
+endif
+ifeq ($(strip $(LANGUAGES)),)
+  override LANGUAGES="English"
+endif
 ifeq ($(BUNDLE_INSTALL_DIR),)
   BUNDLE_INSTALL_DIR := $(GNUSTEP_BUNDLES)
 endif
@@ -95,7 +103,7 @@ build-bundle-dir::
 		$(BUNDLE_DIR_NAME)/$(GNUSTEP_TARGET_DIR)/$(LIBRARY_COMBO) \
 		$(BUNDLE_RESOURCE_DIRS)
 
-build-bundle:: $(BUNDLE_FILE) bundle-resource-files
+build-bundle:: $(BUNDLE_FILE) bundle-resource-files localized-bundle-resource-files
 
 $(BUNDLE_FILE) : $(C_OBJ_FILES) $(OBJC_OBJ_FILES) $(SUBPROJECT_OBJ_FILES)
 	$(BUNDLE_LD) $(BUNDLE_LDFLAGS) $(ALL_LDFLAGS) \
@@ -109,6 +117,21 @@ bundle-resource-files:: $(BUNDLE_DIR_NAME)/Resources/Info-gnustep.plist
 	  for f in "$(RESOURCE_FILES)"; do \
 	    cp -r $$f $(BUNDLE_DIR_NAME)/Resources; \
 	  done \
+	fi)
+
+localized-bundle-resource-files:: $(BUNDLE_DIR_NAME)/Resources/Info-gnustep.plist
+	@(if [ "$(LOCALIZED_RESOURCE_FILES)" != "" ]; then \
+	  echo "Copying localized resources into the bundle wrapper..."; \
+	  for l in $(LANGUAGES); do \
+	    if [ ! -f $$l.lproj ]; then \
+	      $(MKDIRS) $(BUNDLE_DIR_NAME)/Resources/$$l.lproj; \
+	    fi; \
+	    for f in $(LOCALIZED_RESOURCE_FILES); do \
+	      if [ -f $$l.lproj/$$f ]; then \
+	        cp -r $$l.lproj/$$f $(BUNDLE_DIR_NAME)/Resources/$$l.lproj; \
+	      fi; \
+	    done; \
+	  done; \
 	fi)
 
 ifeq ($(PRINCIPAL_CLASS),)
