@@ -30,10 +30,8 @@ GSWAPP_MAKE_LOADED=yes
 # Include in the common makefile rules
 #
 include $(GNUSTEP_MAKEFILES)/rules.make
+include $(GNUSTEP_MAKEFILES)/common.make
 
-#TODO: move this
-TAR=tar
-LN_S=ln -s
 GNUSTEP_GSWAPPS=$(GNUSTEP_INSTALLATION_DIR)/GSWApps
 
 #
