@@ -29,10 +29,8 @@ GSWBUNDLE_MAKE_LOADED=yes
 # Include in the common makefile rules
 #
 include $(GNUSTEP_MAKEFILES)/rules.make
+include $(GNUSTEP_MAKEFILES)/common.make
 
-#TODO: move this
-TAR=tar
-LN_S=ln -s 
 GSWBUNDLE_LD= $(BUNDLE_LD)
 GSWBUNDLE_LDFLAGS = $(BUNDLE_LDFLAGS)
 
